# mcp2mcpb

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-mcpb.yml  build-upstream.yml  check-upstream.yml  cicd.yml
.rrt/: artifacts.lock.toml
.serena/: project.yml
assets/: .gitignore
scripts/: build_assets.py  check_version.py
src/mcp2mcpb/: __init__.py  __main__.py  _ci_args.py  bundler.py  exceptions.py  fetcher.py  generator.py  inspector.py  launch.py  licensing.py  local_source.py  models.py  packer.py  prober.py  sandbox.py  ui.py
tests/: conftest.py  factories.py  test_build_assets.py  test_bundler.py  test_ci_args.py  test_cli.py  test_cli_more.py  test_conversion.py  test_coverage_small.py  test_fetcher.py  test_generator.py  test_inspector.py  test_launch.py  test_licensing.py  test_local_source.py  test_models.py  test_packer.py  test_prober.py  test_rrt_svg_pattern.py  test_sandbox.py  test_sandbox_internals.py
